force-app/main/default/objects/Announcement__c/fields/Announcement_Text__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Text__c</fullName>
    <label>Announcement Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>