force-app/main/default/objects/Announcement__c/fields/Chatter_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The User record of the Announcement recipient.</inlineHelpText>
    <label>Chatter Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Announcements1</relationshipName>
    <type>Lookup</type>
</CustomField>