force-app/main/default/objects/Announcement__c/fields/Created_By_External_Form_or_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Created_By_External_Form_or_Legacy__c</fullName>
    <description>Text field populated by FormAssembly or Legacy migration.</description>
    <label>Created By, External Form or Legacy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>