force-app/main/default/objects/Announcement__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the Contact record.</description>
    <label>Recipient</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Contact.npsp__Primary_Affiliation__c</field>
            <operation>equals</operation>
            <value>001i000000K8NKsAAN</value>
        </filterItems>
        <filterItems>
            <field>Contact.npsp__Primary_Affiliation__c</field>
            <operation>equals</operation>
            <value>001i000000K8MVQAA3</value>
        </filterItems>
        <filterItems>
            <field>Contact.npsp__Primary_Affiliation__c</field>
            <operation>equals</operation>
            <value>0013100001digHBAAY</value>
        </filterItems>
        <infoMessage>This lookup will allow you to select current Cara Chicago, Cleanslate Chicago, or Cara Connects employees.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Announcements</relationshipLabel>
    <relationshipName>Announcements</relationshipName>
    <type>Lookup</type>
</CustomField>