force-app/main/default/objects/Announcement__c/recordTypes/Affirmation.recordType-meta.xml
<RecordType>
    <fullName>Affirmation</fullName>
    <active>true</active>
    <label>Affirmation</label>
</RecordType>