force-app/main/default/objects/Announcement__c/recordTypes/Anniversary.recordType-meta.xml
<RecordType>
    <fullName>Anniversary</fullName>
    <active>true</active>
    <label>Anniversary</label>
</RecordType>