force-app/main/default/objects/Announcement__c/recordTypes/General_Announcement.recordType-meta.xml
<RecordType>
    <fullName>General_Announcement</fullName>
    <active>true</active>
    <label>General Announcement</label>
</RecordType>